--- a/analysis/workflow_bioconductor.Rmd
+++ b/analysis/workflow_bioconductor.Rmd
@@ -39,33 +39,34 @@ work-around, until a change to `DropUtils`, is to rename the files.
 
 ```{r import}
 samples <- list.files(here::here("data/raw"))
-dat <- lapply(samples, function(x) read10xCounts(here::here("data/raw", x)))
+dat <- lapply(samples, function(x) 
+  read10xCounts(here::here("data/raw", x, "mm10")))
+names(dat) <- samples
 ```
 
 ## Filtering
 
 ### Filtering of nuclei
 
-First, we filter any nuclei with greater than 5\% total mitochondrial 
-contamination. Fortunatley, there are no nuclei in this test dataset. But this 
-is an importnat quality control step.
+First, we filter any nuclei with greater than 10\% total mitochondrial 
+contamination. 
 
 ```{r filter-mito}
-for (i in 1:length(dat)) {
+for  (i in 1:length(dat)) {
   
-  rowData(dat[[i]])$Mito <-  grepl("^MT-", rowData(dat[[i]])$Symbol)
+  rowData(dat[[i]])$Mito <-  grepl("^mt-", rowData(dat[[i]])$Symbol)
   dat[[i]] <- calculateQCMetrics(dat[[i]], 
     feature_controls=list(Mt=rowData(dat[[i]])$Mito))
 
 }
 
-no_nuclei_mito <- sapply(dat, function(x) sum(colData(x)$pct_counts_Mt>5))
+no_nuclei_mito <- sapply(dat, function(x) sum(colData(x)$pct_counts_Mt>10))
 
 paste0("Nuclei with more than 5% mitochondrial percentage in ", samples, ": ",
       no_nuclei_mito, " (", round(no_nuclei_mito/sapply(dat, 
         function(x) dim(x)[2]),2)*100, "%)")
 
-dat <- lapply(dat, function(x) x[,!colData(x)$pct_counts_Mt>5])
+dat <- lapply(dat, function(x) x[,!colData(x)$pct_counts_Mt>10])
 ```
 
 Next we filter any nuclei that have library sizes three standard below the 
@@ -89,12 +90,20 @@ paste0("Nuclei not passing feature filter ", samples, ": ",
 
 for (i in 1:length(samples)){
   
-  dat[[i]] <- dat[[i]][, !libsize_drop[[i]]|feature_drop[[i]]]
+  dat[[i]] <- dat[[i]][, !(libsize_drop[[i]]|feature_drop[[i]])]
 
 }
 ```
 
 ### Filtering of genes
+
+## Filter mitochondrial genes
+
+```{r filter-mito-genes}
+dat <- lapply(dat, function(x) x[!rowData(x)$Mito,])
+```
+
+## Filter genes by expression
 
 In order to filter genes we need to combine the data. Then we filter any gene
 that is seen in less than 1\% of the data.
@@ -112,7 +121,8 @@ sce_counts <- sce_counts[keep_genes,]
 ## Normalization
 
 ```{r normalization}
-dat <- do.call(multiBatchNorm, dat)
+#dat <- do.call(multiBatchNorm, dat)
+dat <- lapply(dat, normalize)
 ```
 
 ### Batch correction
@@ -121,7 +131,7 @@ Perfom mnn correction to generate a common PCA representation for the samples.
 
 ```{r batch-correction}
 dat_pca <- do.call(fastMNN, 
-  c(dat, list(k=20, d=50, approximate=TRUE)))
+  c(dat, list(k=50, d=50, approximate=TRUE, ndist=10)))
 ```
 
 Next make a new `SingleCellExperiment`  object with the combined data. In order 
@@ -141,11 +151,11 @@ sce <- SingleCellExperiment(assays=list(counts=sce_counts),
                             colData=sce_colData,
                             rowData=sce_rowData)
 
-rm("sce_counts", "sce_rowData", "sce_colData")
-gc()
+#rm("sce_counts", "sce_rowData", "sce_colData")
+#gc()
 
-sce_lib_factors <- c(unlist(sapply(dat, function(x) librarySizeFactors(x))))
-sce@int_colData$size_factor <- sce_lib_factors
+#sce_lib_factors <- c(unlist(sapply(dat, function(x) librarySizeFactors(x))))
+#sce@int_colData$size_factor <- sce_lib_factors
 sce <- normalize(sce)
 reducedDim(sce, "MNN") <- dat_pca$corrected
 ```
@@ -174,7 +184,7 @@ ggplot(plot_dat, aes(x = mnn1, y = mnn2)) +
 ### Dimension Reduction
 
 ```{r umap}
-umap.defaults$n_neighbors = 50
+umap.defaults$n_neighbors = 20
 umap.defaults$min_dist= 0.1
 sce <- runUMAP(sce, use_dimred="MNN", config = umap.defaults)
 ```
@@ -193,9 +203,13 @@ sce$Cluster <- factor(clusters$membership)
 plot_dat$umap1 <- reducedDim(sce, "UMAP")[,1]
 plot_dat$umap2 <- reducedDim(sce, "UMAP")[,2]
 plot_dat$cluster <- sce$Cluster 
+plot_dat$umi <- sce$total_counts
 
 ggplot(plot_dat, aes(x = umap1, y=umap2)) + 
   geom_point(aes(col = cluster), alpha = 0.5) + 
+  scale_colour_brewer(palette = "Set1")
+ggplot(plot_dat, aes(x = umap1, y=umap2)) + 
+  geom_point(aes(col = sample), alpha = 0.5) + 
   scale_colour_brewer(palette = "Set1")
 ```
 
@@ -211,22 +225,20 @@ all_cell_types <- sapply(as.character(known_markers$Description),
   function(x) strsplit(x, ",")[[1]][1])
 known_markers$CellType <- all_cell_types
 
-excitatory_markers <- sapply(grep("Excitatory neurons", known_markers$CellType),
+glia_markers <- sapply(which(known_markers$Neurotransmitter==""),
   function(x) unlist(strsplit(as.character(known_markers$Markers[x]), " ")))
-inhibitory_markers <- sapply(grep("interneurons", known_markers$CellType),
+vglut1_markers <- sapply(grep("VGLUT1", known_markers$Neurotransmitter),
   function(x) unlist(strsplit(as.character(known_markers$Markers[x]), " ")))
-microglia_markers <- sapply(grep("Microglia", known_markers$CellType),
+vglut2_markers <- sapply(grep("VGLUT2", known_markers$Neurotransmitter),
   function(x) unlist(strsplit(as.character(known_markers$Markers[x]), " ")))
-astrocyte_markers <- sapply(grep("astrocyte", known_markers$CellType),
-  function(x) unlist(strsplit(as.character(known_markers$Markers[x]), " ")))
-oligo_markers <- sapply(grep("oligodendrocyte", known_markers$CellType),
+GABA_markers <- sapply(grep("GABA", known_markers$Neurotransmitter),
   function(x) unlist(strsplit(as.character(known_markers$Markers[x]), " ")))
 
-markers <- list(excitatory = unlist(excitatory_markers),
-                inhibitory = unlist(inhibitory_markers),
-                microglia = unlist(microglia_markers),
-                astrocyte = unlist(astrocyte_markers),
-                oligodendrocyte = unlist(oligo_markers))
+
+markers <- list(gaba = unlist(GABA_markers),
+                glia = unlist(glia_markers),
+                vglut1 = unlist(vglut1_markers),
+                vglut2 = unlist(vglut2_markers))
 
 cell_type_means <- sapply(markers, function(x) {
   index <- match(x , rowData(sce)$Symbol)
@@ -246,6 +258,8 @@ for (i in colnames(cell_type_means)) {
   
 }
 
+ggplot(plot_dat, aes(x = umap1, y = umap2)) + 
+  geom_point(aes(color=umi)) + scale_color_viridis_c()
 ```
 
 ## Trajectory analysis
